# basic_artificial_life

./: Cargo.toml
assets/shaders/clouds/: buffer_a.wgsl  buffer_b.wgsl  buffer_d.wgsl  image.wgsl
assets/shaders/dancing_tree/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  buffer_d.wgsl  image.wgsl
assets/shaders/dry_ice/: buffer_a.wgsl  buffer_b.wgsl  buffer_d.wgsl  image.wgsl
assets/shaders/equilibrium/: buffer_a.wgsl  (+4 more)
examples/clouds/: buffer_a.wgsl  image.wgsl
examples/dancing_tree/: buffer_a.wgsl  buffer_b.wgsl  image.wgsl
examples/dry_ice/: buffer_a.wgsl  common.wgsl  image.wgsl
examples/fire/: buffer_a.wgsl  buffer_b.wgsl
examples/fluid/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  buffer_d.wgsl  image.wgsl
examples/life/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  common.wgsl  image.wgsl  life.rs
examples/love_and_domination/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  buffer_d.wgsl  image.wgsl
examples/minimal/: buffer_a.wgsl
examples/molecular_dynamics/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  image.wgsl
examples/paint/: buffer_a.wgsl  image.wgsl
examples/paint_streams2/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  image.wgsl
examples/seascape/: buffer_a.wgsl  buffer_d.wgsl
examples/sunset/: buffer_a.wgsl  buffer_c.wgsl
examples/toy/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  buffer_d.wgsl  common.wgsl  image.wgsl  toy.rs
src/: helpers.rs  lib.rs  lib_backup_for_life.rs  main.rs  texture_a.rs  texture_b.rs  texture_c.rs  texture_d.rs
src/templates/: common_prelude.wgsl  debugger.wgsl  image_template.wgsl
(+47 files in other folders)
